# nexday

./: CMakeLists.txt  IntegratedMarketPredictionEngine.cpp  IntegratedMarketPredictionEngine.h  PredictionValidator.cpp  PredictionValidator.h  build.bat  debug_database.bat  docker-compose.yml  ema_test.cpp  historical_ema_test.cpp  integrated_prediction_main.cpp  integrated_test_main.cpp  minimal_prediction_test.cpp  minimal_test.cpp  nexday_schema.sql  nexday_simple_schema.sql  prediction_validation_schema.sql  prediction_validator_test.cpp  quick_postgres_test.bat  setup_complete_database.bat  setup_nexday_database_CORRECTED.bat  test_prediction_validator.cpp  verify_database.bat  verify_postgresql17.bat
IQFeedConnection/: DailyDataFetcher.cpp  DailyDataFetcher.h  FetchScheduler.cpp  FetchScheduler.h  FifteenMinDataFetcher.cpp  FifteenMinDataFetcher.h  HistoricalDataFetcher.cpp  HistoricalDataFetcher.h  IQFeedConnection.cpp  IQFeedConnectionManager.cpp  IQFeedConnectionManager.h  Logger.cpp  Logger.h  OneHourDataFetcher.cpp  OneHourDataFetcher.h  ThirtyMinDataFetcher.cpp  ThirtyMinDataFetcher.h  TwoHourDataFetcher.cpp  TwoHourDataFetcher.h  main.cpp
Predictions/: BusinessDayCalculator.h  CompletePipeline.cpp  EMACalculator.h  MarketPrediction.h  MarketPredictionEngine.cpp  MarketPredictionManager.cpp  NexdayMarketPredictions.h  PredictionPersister.h  PredictionTypes.h  PredictionValidator.h  SimplePredictionTest.cpp
database/: database_simple.cpp  database_simple.h  database_test_main.cpp
tests/: api_test.cpp.cpp
